--- a/jupyter_server/templates/page.html
+++ b/jupyter_server/templates/page.html
@@ -49,7 +49,7 @@
     <div class="header-bar"></div>
 
     {% block header %}
-    {% endblock %}
+    {% endblock header %}
   </div>
 
   <div id="site">
@@ -61,7 +61,7 @@
   {% endblock after_site %}
 
   {% block script %}
-  {% endblock <script></script> %}
+  {% endblock script %}
 
   <script type='text/javascript'>
     function _remove_token_from_url() {
